clang/test/BSC/Positive/Coroutine/Other/NonCallAwaitExpr/await-non-call/await-non-call.cbs
// RUN: %clang %s -o %test.output
// RUN: %test.output
// RUN: %clang -rewrite-bsc %S/../../../future.hbs -o %T/../../../future.h
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

#include "../../../future.hbs"
#include <stdlib.h>

async int read(int a) {
  return 0;
}

async int g();

async int f() {
    int a = await g();
    return a;
}

async int g() {
    struct __FatPointer<int> a = read(1);
    await a;
    return 0;
}

int main() {
  struct __FatPointer<int> this = f();
  this.vtable->poll(this.data);
  this.vtable->free(this.data); 
  return 0;
}